나래와 협약내용 추가

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
                                 <div class="icon-box-content row">
 
                                   <div class="col-md-6 m-auto">
+                                    <p><a href="https://www.makersnr.com/" target=new>한국메이커스협동조합 나래</a></p>
+
                                     <p><a href="https://www.kiat.or.kr/" target=new>한국산업기술진흥원</a></p>
 
                                     <p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
@@ -309,6 +311,17 @@
                             <h2>연혁</h2>
                             <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 Platform이 걸어온 길</p>
                             <div class="space" data-MY="50px"></div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2019-12</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+                        				    한국메이커스협동조합-나래와 제휴협약
+                        				    </p>
+                                </div>
+                            </div>
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
