시드투자 유치 기록 추가

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <meta property="og:description" content="재미있게 일하기 위한 진보된 플랫폼"/>
         <title>주식회사 어플라이 | APLY - Advanced platform to fly</title>
         <meta name="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
-        <meta name="description" content="재미있게 일하기 위한 진보된 플랫폼">
+        <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
         <meta itemprop="description" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
         <meta itemprop="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
 
-        <meta property="og:description"  content="재미있게 일하기 위한 진보된 플랫폼">
-        <meta name="twitter:description" content="재미있게 일하기 위한 진보된 플랫폼">
+        <meta property="og:description"  content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+        <meta name="twitter:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
         <meta itemprop="name"      content="어플라이 | APLY - Advanced platform to fly">
         <meta property="og:title"  content="어플라이 | APLY - Advanced platform to fly">
         <meta name="twitter:title" content="어플라이 | APLY - Advanced platform to fly">
@@ -318,7 +318,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                        				    한국메이커스협동조합-나래와 제휴협약
+                        				    제주창조경제혁신센터 시드투자 유치<br>
+							    한국메이커스협동조합'나래'와 제휴협약
                         				    </p>
                                 </div>
                             </div>
