낭그늘 사업 선정 내용 추가

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
                                 <div class="icon-box-content row">
 
                                   <div class="col-md-6 m-auto">
+                                    <p><a href="https://mysc.imweb.me/" target=new>엠와이소셜컴퍼니(MYSC)</a></p>
+
+                                    <p><a href="https://www.mysc.co.kr/" target=new>제주국제자유도시개발센터(JDC)</a></p>
+
                                     <p><a href="https://www.makersnr.com/" target=new>한국메이커스협동조합 나래</a></p>
 
                                     <p><a href="https://www.kiat.or.kr/" target=new>한국산업기술진흥원</a></p>
@@ -267,11 +271,11 @@
 
                                     <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
 
+                                  </div>
+                                  <div class="col-md-6">
                                     <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
                                     <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
-                                  </div>
-                                  <div class="col-md-6">
 
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
@@ -318,8 +322,9 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                        				    제주창조경제혁신센터 시드투자 유치<br>
-							    한국메이커스협동조합'나래'와 제휴협약
+                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 선정,<br>  
+                        				    제주창조경제혁신센터 시드투자 유치,<br>
+							                      한국메이커스협동조합'나래'와 제휴협약
                         				    </p>
                                 </div>
                             </div>
