--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <div class="col-lg-6"><img src="assets/images/main/ipad.png" alt=""></div>
                         <div class="col-lg-5 offset-lg-1">
                             <h2>연혁</h2>
-                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 Platform이 걸어온 길</p>
+                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길</p>
                             <div class="space" data-MY="50px"></div>
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
@@ -322,7 +322,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 선정,<br>  
+                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 선정,<br>
                         				    제주창조경제혁신센터 시드투자 유치,<br>
 							                      한국메이커스협동조합'나래'와 제휴협약
                         				    </p>
