--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
 
                                     <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
 
-                                  </div>
-                                  <div class="col-md-6">
                                     <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
+                                  </div>
+                                  <div class="col-md-6">
                                     <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
 
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
@@ -295,6 +295,8 @@
                                     <p><a href="http://www.cku.ac.kr" target=new>가톨릭관동대학교</a></p>
 
                                     <p><a href="https://companya.modoo.at" target=new>엑셀러레이터 컴퍼니에이</a></p>
+
+                                    <p> &nbsp;</p>
                                   </div>
                                 </div>
                             </div>
