--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
                                     <p><a href="https://www.kipo.go.kr" target=new>특허청</a></p>
 
-                                    <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
+                                    <p><a href="https://tipip.kr" target=new>티아이피 특허법률 사무소</a></p>
 
                                     <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
 
