mysc, jdc 주소 수정

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                                 </div>
                                 <div class="icon-box-content row">
                                   <div class="col-md-6 m-auto">
-                                    <p><a href="https://mysc.imweb.me/" target=new>엠와이소셜컴퍼니(MYSC)</a></p>
+                                    <p><a href="https://mysc.co.kr/" target=new>엠와이소셜컴퍼니(MYSC)</a></p>
 
-                                    <p><a href="https://www.mysc.co.kr/" target=new>제주국제자유도시개발센터(JDC)</a></p>
+                                    <p><a href="https://www.jdcenter.com/" target=new>제주국제자유도시개발센터(JDC)</a></p>
 
                                     <p><a href="https://www.makersnr.com/" target=new>한국메이커스협동조합 나래</a></p>
 
