메뉴랑 아이콘 등등 추가, 수정

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                 <div class="inner-navigation collapse">
                     <div class="inner-nav">
                         <ul>
-                            <li><a href="#"><span class="menu-item-span">홈</span></a>
+                            <li><a href="#"><span class="menu-item-span">MAIN</span></a>
                             </li>
-                            <li><a href="#section-about"><span class="menu-item-span">소개</span></a>
+                            <li><a href="#section-about"><span class="menu-item-span">BUSINESS</span></a>
                             </li>
-                            <li><a href="#section-history"><span class="menu-item-span">연혁</span></a>
+                            <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a>
                             </li>
-                            <li><a href="#section-team"><span class="menu-item-span">팀</span></a>
+                            <li><a href="#section-team"><span class="menu-item-span">TEAM</span></a>
                             </li>
-                            <li><a href="#section-location"><span class="menu-item-span">찾아오시는길</span></a>
+                            <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
                             </li>
-                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">블로그</span></a>
+                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
 
                         </ul>
@@ -579,6 +579,8 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
+					    <li><a href="https://blog.aply.biz"><i class="fab fa-blogger"></i></a></li>
+					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
 					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="220" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
                                         </ul>
