두근두근 도메인에서 top 삭제

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                                     <h6>APLY가 개발중인 앱과 서비스</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 지인 또는 친구에게 심박패턴을 전달하는 감성앱</p>
+                                    <p><a href="https://dkdk.io" target="new">두근두근</a> : 지인 또는 친구에게 심박패턴을 전달하는 감성앱</p>
                                     <p>
-                                      <a href="https://top.dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                      <a href="https://dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
                                     </p>
@@ -602,7 +602,7 @@
                                     <ul>
                                         <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.png" alt="두런두런"></a></li>
                                         <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.png" alt="드로미"></a></li>
-                                        <li><a href="https://top.dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근"></a></li>
+                                        <li><a href="https://dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근"></a></li>
 
                                     </ul>
                                 </aside>
