dkdk 주소에서 top 제거

--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-heart-broken"></span></div>
                                 <div class="icon-box-title">
-                                    <a href="https://top.dkdk.io" target="new">두근두근</a>
+                                    <a href="https://dkdk.io" target="new">두근두근</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
                                     지인 또는 친구에게 심박패턴을 전달하는 감성 서비스 및 디바이스                                    
                         				    </p>
                         				  	<p>
-                        				  		<a href="https://top.dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                        				  		<a href="https://dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
                                     	<a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                   		<a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
                                   	</p>
