사명 문구 색상위치 변경

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     <div class="row">
                         <div class="col-md-12">                            
                             <h4 class="ml15">
-															  <span class="word"><font color=#6668a9>A</font>dvanced <font color=#6668a9>P</font>latform</span>
-															  <span class="word">to F<font color=#6668a9>LY</font></span>
+															  <span class="word"><font color=#6668a9>A</font>dvanced <font color=#6668a9>PL</font>atform</span>
+															  <span class="word">to FL<font color=#6668a9>Y</font></span>
 														</h1>
                         </div>
                     </div>
