--- a/index.html
+++ b/index.html
@@ -836,8 +836,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                      		<h4>Location</h4>
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                      		<h4>Location</h4>                          
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2661.8676056522904!2d127.02996766510078!3d37.49584319870313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1c1ebf9d609%3A0xd8b7c75c90855a48!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqDXtmLjsoJA!5e0!3m2!1sko!2skr!4v1583898787666!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                         </div>
                     </div>
                     <div class="row">
@@ -864,7 +864,7 @@
                                     <div class="textwidget">
                                         <p>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
+                                            서울특별시 강남구 테헤란로 2길 27, 패스트파이브 빌딩, 11층 / 06241<br>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: 02-6956-0801<br>
                                             Fax: 02-6954-1019<br>
