--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <p class="m-b-30"><img src="assets/images/main/drone_t.png" alt=""></p>
                         </div>
                         <div class="col-lg-5 offset-lg-1">
-                            <h2>Drone Technolgoy</h2>
+                            <h2>Drone Technology</h2>
                             <p class="lead m-b-30">드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 드옴이 되는 기술을 제공합니다.</p>                            
                         </div>
                     </div>                   
@@ -170,7 +170,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-5">
-                            <h2>Emotional Communication Technolgoy</h2>
+                            <h2>Emotional Communication Technology</h2>
                             <p class="lead m-b-30">아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다</p>                            
                         </div>
                         <div class="col-lg-6 offset-lg-1">
