--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="col-lg-5 offset-lg-1">
                             <h2>Drone Technology</h2>
-                            <p class="lead m-b-30">드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 드옴이 되는 기술을 제공합니다.</p>                            
+                            <p class="lead m-b-30">드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.</p>                            
                         </div>
                     </div>                   
                 </div>
