띄어쓰기 수정

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="row">
                         <div class="col-md-12">                            
                             <div class="col-md-6 m-auto text-center">
-                            	<h5>APLY는 보다 진보된 기술로<br>재미있고 멋진 서비스를 연구하고 개발합니다</h5>
+                            	<h5>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</h5>
                         		</div>
                         </div>
                     </div>
