--- a/index.html
+++ b/index.html
@@ -159,19 +159,39 @@
                             <p class="m-b-30"><img src="assets/images/main/drone_t.png" alt=""></p>
                         </div>
                         <div class="col-lg-5 offset-lg-1">
-                            <h2>Drone Technology</h2>
-                            <p class="lead m-b-30">드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.</p>                            
-                        </div>
+                        	<div class="accordion" id="accordion1">
+	                        		<div class="accordion-item">
+														       <div class="accordion-item-header">
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1" class="" aria-expanded="true">Drone Technology</a></h6>
+														       </div>
+														       <div class="collapse" id="collapse-1" data-parent="#accordion1">
+														          <div class="accordion-item-body">
+														              <p>드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 쉽게 제어 할 수 있는 다양한 사용방법도 제공합니다.</p>
+														          </div>
+														       </div>
+														  </div>
+													</div>
+								        </div>
                     </div>                   
-                </div>
+                </div>                
             </section>
             <!-- Modal-->
             <section class="module divider-top">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-lg-5">
-                            <h2>Emotional Communication Technology</h2>
-                            <p class="lead m-b-30">아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다</p>                            
+                        <div class="col-lg-5">             
+                        	<div class="accordion" id="accordion2">               
+                            <div class="accordion-item">
+													       <div class="accordion-item-header">
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2" class="" aria-expanded="true">Emotional Communication Technology</a></h6>
+													       </div>
+													       <div class="collapse" id="collapse-2" data-parent="#accordion2">
+													          <div class="accordion-item-body">
+													              <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다.<br>그리운 사람, 마음을 표현하고 싶은 상대에게 간편한 방법으로 마음을 전하는 재미있는 방법을 제공합니다.</p>
+													          </div>
+													       </div>
+													  </div>
+													</div>
                         </div>
                         <div class="col-lg-6 offset-lg-1">
                             <p class="m-b-30"><img src="assets/images/main/comm_t.png" alt=""></p>
@@ -185,11 +205,21 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <p class="m-b-30"><img src="assets/images/main/data_t.png" alt=""></p>
-                        </div>
-                        <div class="col-lg-5 offset-lg-1">
-                            <h2>Big data, AI Technology</h2>
-                            <p class="lead m-b-30">데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>                            
-                        </div>
+                        </div>                        
+	                      <div class="col-lg-5 offset-lg-1">                            
+	                      	<div class="accordion" id="accordion3">
+	                            <div class="accordion-item">
+														       <div class="accordion-item-header">
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3" class="" aria-expanded="true">Big data, AI Technology</a></h6>
+														       </div>
+														       <div class="collapse" id="collapse-3" data-parent="#accordion3">
+														          <div class="accordion-item-body">
+														              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리(Vision), 이상탐지(Anomaly Detection)기술을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
+														          </div>
+														       </div>
+														  </div> 
+	                        </div>
+	                      </div>
                     </div>
                 </div>
             </section>
@@ -282,7 +312,7 @@
 						
             
             <!-- About-->
-            <section class="module bg-gray" id="section-history">
+            <section class="module" id="section-history">
                 <div class="container">
                 		<div class="row">
                         <div class="col-md-12">
@@ -499,7 +529,7 @@
             <!-- Testimonials end-->
 
             <!-- Posts-->
-            <section class="module bg-gray">
+            <section class="module">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 m-auto">
@@ -815,7 +845,7 @@
 						</section>
 
             <!-- Counters-->            
-            <section class="module bg-gray" id="section-location">
+            <section class="module" id="section-location">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
