--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    온라인으로 눈싸움을!
+                                    온라인세서 눈싸움을!
                         				    </p>
                         				    <p>
                         				    스마트폰으로 친구와 눈싸움(Eye-staring game)을 하는 재미있는 게임을 개발하기 위한 모임입니다.
