시작 문구들 -로 되어 있던 것들 수정

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         	<div class="accordion" id="accordion1">
 	                        		<div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1" class="" aria-expanded="true">Drone Technology</a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1" class="" aria-expanded="false">Drone Technology</a></h6>
 														       </div>
 														       <div class="collapse" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
@@ -183,7 +183,7 @@
                         	<div class="accordion" id="accordion2">               
                             <div class="accordion-item">
 													       <div class="accordion-item-header">
-													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2" class="" aria-expanded="true">Emotional Communication Technology</a></h6>
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2" class="" aria-expanded="false">Emotional Communication Technology</a></h6>
 													       </div>
 													       <div class="collapse" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
@@ -210,7 +210,7 @@
 	                      	<div class="accordion" id="accordion3">
 	                            <div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3" class="" aria-expanded="true">Big data, AI Technology</a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3" class="" aria-expanded="false">Big data, AI Technology</a></h6>
 														       </div>
 														       <div class="collapse" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
