--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
                 </div>
             </section>
             
+            <div class="accordion-item">
+            	<div class="accordion-item-header">
+														          
+							</div>
+            </div>
   
 						<!-- Modal-->
             <section class="module">
