--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 													       </div>
 													       <div class="collapse" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다.<br>그리운 사람, 마음을 표현하고 싶은 상대에게 간편한 방법으로 마음을 전하는 재미있는 방법을 제공합니다.</p>
+													              <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다.<br>그리운 사람, 마음을 표현하고 싶은 상대에게 간편하게 마음을 전할 수 있는 재미있는 방법들을 제공합니다.</p>
 													          </div>
 													       </div>
 													  </div>
