파트너 추가

--- a/index.html
+++ b/index.html
@@ -605,6 +605,14 @@
                     </div>
 
                 		<div class="row">
+                				<div class="col-lg-4 col-md-6">
+		                            <div class="icon-box icon-box-left">
+		                                <div class="icon-box-title">
+		                                    <p><a href="https://k-vic.co.kr/" target=new>한국벤처투자(주)</a></p>
+		                                </div>
+		                            </div>
+		                    </div>
+		                    
 	                			<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
