한국벤처투자 투자 유치건 추가

--- a/index.html
+++ b/index.html
@@ -339,6 +339,19 @@
                         </div>
                     </div>
                     <div class="row">
+                    		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2020-04</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+                                    한국벤처투자(주) 투자 유치							                      
+                        				    </p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
