낭그늘 선정 추가

--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    한국벤처투자(주) 투자 유치							                      
+                                    한국벤처투자(주) 투자 유치,<br>
+                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 엑셀러레이팅 선정
                         				    </p>
                                 </div>
                             </div>
@@ -360,7 +361,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 선정,<br>
+                                    제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 인큐베이팅 선정,<br>
                         				    제주창조경제혁신센터 시드투자 유치,<br>
 							                      한국메이커스협동조합'나래'와 제휴협약
                         				    </p>
