중복, 오타 수정

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 														       </div>
 														       <div class="collapse" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 쉽게 제어 할 수 있는 다양한 사용방법도 제공합니다.</p>
+														              <p>드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 쉽게 제어 할 수 있는 다양한 드론 제어기술을 제공합니다.</p>
 														          </div>
 														       </div>
 														  </div>
@@ -664,15 +664,7 @@
                                     	<p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
 		                                </div>
 		                            </div>
-		                		</div>
-
-		                		<div class="col-lg-4 col-md-6">
-		                            <div class="icon-box icon-box-left">
-		                                <div class="icon-box-title">
-                                    	<p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
-		                                </div>
-		                            </div>
-		                		</div>
+		                		</div>		                		
 
 		                		<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
@@ -873,7 +865,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    온라인세서 눈싸움을!
+                                    온라인에서 눈싸움을!
                         				    </p>
                         				    <p>
                         				    스마트폰으로 친구와 눈싸움(Eye-staring game)을 하는 재미있는 게임을 개발하기 위한 모임입니다.
