로봇신문 추가

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                                 <div class="client"><a href="http://www.mediajeju.com/news/articleView.html?idxno=322915" target=_new><img src="assets/images/press/media_jeju.png" alt=""></a></div>
                                 <div class="client"><a href="https://www.msn.com/ko-kr/news/national/jdc-%EC%86%8C%EC%85%9C%EB%B2%A4%EC%B2%98-%EC%A7%80%EC%9B%90-%EB%82%AD%EA%B7%B8%EB%8A%98-2%EA%B8%B0-6%EA%B0%9C-%ED%8C%80-%EC%84%A0%EC%A0%95/ar-BB131cfP" target=_new><img src="assets/images/press/msn.png" alt=""></a></div>
                                 <div class="client"><a href="https://www.datanet.co.kr/news/articleView.html?idxno=140863" target=_new><img src="assets/images/press/datanet.png" alt=""></a></div>
-
+		        <div class="client"><a href="http://www.irobotnews.com/news/articleView.html?idxno=19159" target=_new><img src="assets/images/press/robot.png" alt=""></a></div>
                             </div>
                         </div>
                   </div>
