팀설명에 배경 이미지 추가

--- a/index.html
+++ b/index.html
@@ -570,12 +570,11 @@
             </section>
             <!-- Testimonials end-->
 
-            <!-- Posts-->
-            <section class="module">
+						<section class="module-cover parallax text-center fullscreen" data-background="assets/images/main/aply_u.png" data-overlay="0.6">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6 m-auto">
-                            <h3>다양한 분야에 특화된 팀원들이 있습니다</h3>
+                        <div class="col-md-12">
+                            <h2 class="m-b-20"><strong>다양한 분야에 특화된 팀원들이 있습니다</strong></h2>
                             <p class="lead">
                             - 인공지능/빅데이터/드론/해상 통신기술들을 두루 경험한 기술팀<br>
                             - 국가인재 관리, 통계분석, 특허, 과학기술 정책 연구 경험이 풍부한 기획팀<br>
@@ -588,11 +587,12 @@
                             <a href="https://www.instagram.com/aplyplatform"><i class="ti-instagram" aria-hidden="true"></i></a>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="space" data-MY="60px"></div>
-                        </div>
-                    </div>
+                </div>
+            </section>
+            
+            <!-- Posts-->
+            <section class="module">
+                <div class="container">                    
                     <div class="row row-post-masonry">
                         <div class="col-md-6 m-auto text-center">
                                         <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div><br><br>
