팀소개 재정렬

--- a/index.html
+++ b/index.html
@@ -575,14 +575,16 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h2 class="m-b-20"><strong>다양한 분야에 특화된 팀원들이 있습니다</strong></h2>
-                            <p class="lead">
-                            - 인공지능/빅데이터/드론/해상 통신기술들을 두루 경험한 기술팀<br>
-                            - 국가인재 관리, 통계분석, 특허, 과학기술 정책 연구 경험이 풍부한 기획팀<br>
-                            - 철학과 이야기가 있는 사용자경험, 콘텐츠, 디자인을 꾸밀줄 아는 디자인팀<br>
-                            - 정확하게 고객을 찾고 감동시킬 줄 아는 마케팅팀<br>
+                            <ul>
+                            <li>- 인공지능/빅데이터/드론/해상 통신기술들을 두루 경험한 기술팀</li>
+                            <li>- 국가인재 관리, 통계분석, 특허, 과학기술 정책 연구 경험이 풍부한 기획팀</li>
+                            <li>- 철학과 이야기가 있는 사용자경험, 콘텐츠, 디자인을 꾸밀줄 아는 디자인팀</li>
+                            <li>- 정확하게 고객을 찾고 감동시킬 줄 아는 마케팅팀</li>
+		    </ul>
                             <br>
                             <br>
-                            보다 즐겁고, 재미있게 일하는 진보된 플랫폼 -<br><b><i>APLY</i></b> 팀원들의 이야기를 페이스북과 인스타그램에서 만나보세요</p>
+                            보다 즐겁고, 재미있게 일하는 진보된 플랫폼 -<br><b><i>APLY</i></b> 팀원들의 이야기를 페이스북과 인스타그램에서 만나보세요
+
                             <a href="https://www.facebook.com/APLYPLATFORM"><i class="ti-facebook" aria-hidden="true"></i></a>&nbsp;&nbsp;
                             <a href="https://www.instagram.com/aplyplatform"><i class="ti-instagram" aria-hidden="true"></i></a>
                         </div>
