--- a/index.html
+++ b/index.html
@@ -339,7 +339,20 @@
                         </div>
                     </div>
                     <div class="row">
-                    		<div class="col-lg-4 col-md-6">
+                    	<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2020-05</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+                                    드론메이커스협동조합과 제휴 협약
+                        				    </p>
+                                </div>
+                            </div>
+                        </div>
+                    	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
                                 <div class="icon-box-title">
@@ -625,7 +638,14 @@
                     </div>
 
                 		<div class="row">
-                				<div class="col-lg-4 col-md-6">
+                		    <div class="col-lg-4 col-md-6">
+		                            <div class="icon-box icon-box-left">
+		                                <div class="icon-box-title">
+		                                    <p><a href="https://dronemakers.modoo.at/" target=new>드론메이커스협동조합</a></p>
+		                                </div>
+		                            </div>
+		                    </div>
+                		    <div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
 		                                    <p><a href="https://k-vic.co.kr/" target=new>한국벤처투자(주)</a></p>
