제주지사 설립 기록 추가, 주소, 전화번호 형식 변경

--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    드론메이커스협동조합과 제휴 협약
-                        				    </p>
+                                    드론메이커스협동조합과 제휴 협약,<br>
+			제주지사 설립</p>
                                 </div>
                             </div>
                         </div>
@@ -941,10 +941,11 @@
                                     <div class="textwidget">
                                         <p>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            서울특별시 강남구 테헤란로 2길 27, 패스트파이브 빌딩, 11층 / 06241<br>
+                                            Head Office: 11F, 27, Teheran-ro 2-gil, Gangnam-gu, Seoul, Korea / 06241<br>
+			        Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<br>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
-                                            Phone: 02-6956-0801<br>
-                                            Fax: 02-2135-5351<br>
+                                            Phone: +82-2-6956-0801<br>
+                                            Fax: +82-2-2135-5351<br>
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
