인스타 위젯 모습 수정

--- a/index.html
+++ b/index.html
@@ -612,9 +612,11 @@
                         <div class="col-md-6 m-auto text-center">
                                         <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div><br><br>
                         </div>
-                        <div class="col-md-6 m-auto text-center">
-                                        <iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
-                            <!-- Post end-->
+                        <div class="col-md-6 m-auto text-center">                                        
+																				<!-- SnapWidget -->
+																				<script src="https://snapwidget.com/js/snapwidget.js"></script>
+																				<iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
+                           						  <!-- Post end-->
                         </div>
 
                     </div>
