--- a/index.html
+++ b/index.html
@@ -943,8 +943,8 @@
                                     <div class="textwidget">
                                         <p>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            Head Office: 11F, 27, Teheran-ro 2-gil, Gangnam-gu, Seoul, Korea / 06241<br>
-			        Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<br>
+                                            Head Office: 11F, 27, Teheran-ro 2-gil, Gangnam-gu, Seoul, Korea / 06241<hr>
+			        															Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
                                             Fax: +82-2-2135-5351<br>
@@ -973,10 +973,12 @@
                                         <h6>Portfolio</h6>
                                     </div>
                                     <ul>
-                                        <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.png" alt="두런두런"></a></li>
-                                        <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.png" alt="드로미"></a></li>
-                                        <li><a href="https://dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근"></a></li>
-
+                                        <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.png" alt="두런두런" style="height:30px;width:100px"></a></li>
+                                        <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.png" alt="드로미" style="height:30px;width:60px"></a></li>                                        
+                                    </ul>
+                                    <ul>                                        
+                                        <li><a href="https://dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근" style="height:25px;width:70px"></a></li>
+                                        <li><a href="https://duni.io" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:25px;width:65px"></a></li>
                                     </ul>
                                 </aside>
                             </div>
