블로그 아이콘 변경

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-					    <li><a href="https://blog.aply.biz"><i class="fab fa-blogger"></i></a></li>
+					    <li><a href="https://blog.aply.biz"><img src="assets/images/blog_icon.png" width="18"></a></li>
 					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
 					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="230" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
